# translation_runner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
docs/: background.md  getting-started.md  index.html
src/translation_runner/: config.py  google_doc.py  openpecha_api.py  pecha_handling.py  pipeline.py  utils.py
tests/: test_example.py
tests/pecha_handling/: test_pecha_handling.py
tests/pecha_handling/data/I92B4BA6C/: metadata.json
tests/pecha_handling/data/I92B4BA6C/base/: 4249.txt
tests/pecha_handling/data/I92B4BA6C/layers/4249/: alignment-8899.json
tests/pecha_handling/data/IDDA32A00/: metadata.json
tests/pecha_handling/data/IDDA32A00/base/: 4885.txt
tests/pecha_handling/data/IDDA32A00/layers/4885/: alignment-298F.json  segmentation-4B66.json
